Ensure source and target values include channel extremes.

--- a/tools/band_finder/notebooks/troublesome_tiles.ipynb
+++ b/tools/band_finder/notebooks/troublesome_tiles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "distinguished-birth",
+   "id": "refined-promise",
    "metadata": {},
    "source": [
     "# Troublesome Tiles\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "jewish-delta",
+   "id": "eight-chapter",
    "metadata": {},
    "source": [
     "I've cached a copy of it here.\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dependent-acrylic",
+   "id": "individual-evaluation",
    "metadata": {},
    "source": [
     "Why does this mapping fail so miserably?"
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "metric-wisconsin",
+   "execution_count": 1,
+   "id": "proper-devon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spoken-revision",
+   "id": "sudden-kruger",
    "metadata": {},
    "source": [
     "Let's try to re-tile a portion of the image."
@@ -152,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "infinite-novelty",
+   "execution_count": 2,
+   "id": "continuous-calendar",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "670e2729fae146dc8186da67b566ca44",
+       "model_id": "abf9b9330499407383c127ca6ba02ffe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,25 +193,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "promising-strip",
+   "execution_count": 10,
+   "id": "entire-steps",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rescale: channel 0 is 0.0...98.16679382324219.\n",
-      "Rescale: channel 1 is -17.54530906677246...22.40850067138672.\n",
-      "Rescale: Adjusted 1 to -1.0...1.0.\n",
-      "Rescale: channel 2 is 0.0...43.117774963378906.\n",
-      "Rescale: Adjusted 2 to -1.0...1.0.\n"
+      "Rescale: channel 0 is 0.0...99.71771240234375.\n",
+      "Rescale: channel 1 is -40.673431396484375...48.06147384643555.\n",
+      "Rescale: channel 2 is -30.578603744506836...69.52827453613281.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "603f046ae1ee467cbe85b79b9044ec5a",
+       "model_id": "e45d620cbd4240afbf88345507f2f692",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,10 +223,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12c0f4640>"
+       "<matplotlib.image.AxesImage at 0x12ecd8a90>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,8 +256,8 @@
     "\n",
     "def rescale_lab(image):\n",
     "    rescale_channel(image, 0, 0.0, 100.0)\n",
-    "    rescale_channel(image, 1, -1.0, 1.0)\n",
-    "    rescale_channel(image, 2, -1.0, 1.0)\n",
+    "    rescale_channel(image, 1, -127.0, 128.0)\n",
+    "    rescale_channel(image, 2, -128.0, 127.0)\n",
     "    \n",
     "\n",
     "lab_image_data = builder.get_composite()\n",
@@ -271,40 +269,46 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boxed-piano",
+   "id": "sexual-fight",
    "metadata": {},
    "source": [
-    "**Blegh.**  Do things look any better if I stick to RGB throughout?"
+    "What am I doing wrong?  I think the problem for the second tile row involves the incomplete image data in column 0."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "coordinated-boards",
+   "id": "stable-cotton",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from band_finder.image_matcher import ChannelAdjuster, ImageMatcher\n",
+    "from band_finder.tile_image_grid import TileImageGrid, Edge\n",
+    "\n",
+    "top_image_id = \"NRE_0015_0668275956_042ECM_N0030188NCAM00400_01_0LLJ\"\n",
+    "bottom_image_id = \"NRE_0015_0668275956_042ECM_N0030188NCAM00400_05_0LLJ\"\n",
+    "\n",
+    "top_lab = get_lab_image(top_image_id)\n",
+    "bottom_lab = get_lab_image(bottom_image_id)\n",
+    "\n",
+    "tiles_by_origin = {\n",
+    "    (0, 0): top_lab,\n",
+    "    (0, 952): bottom_lab\n",
+    "}\n",
+    "\n",
+    "tig = TileImageGrid(tiles_by_origin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "downtown-phrase",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_01_0LLJ at (0, 0)\n",
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_02_0LLJ at (1272, 0)\n",
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_03_0LLJ at (2552, 0)\n",
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_04_0LLJ at (3832, 0)\n",
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_05_0LLJ at (0, 952)\n",
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_06_0LLJ at (1272, 952)\n",
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_07_0LLJ at (2552, 952)\n",
-      "Add NRE_0015_0668275956_042ECM_N0030188NCAM00400_08_0LLJ at (3832, 952)\n",
-      "Rescale: channel 0 is 0.0...98.16679382324219.\n",
-      "Rescale: channel 1 is -17.54530906677246...22.40850067138672.\n",
-      "Rescale: Adjusted 1 to 0.0...255.00001525878906.\n",
-      "Rescale: channel 2 is 0.0...43.117774963378906.\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e4ff9b6736c4402abed4cc4df3458de",
+       "model_id": "926985296a924019861818fa4be83895",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,51 +318,171 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12c134370>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "rgb_builder = TileMatcherBuilder(get_image=get_rgb_image)\n",
-    "rgb_builder.add_test_tiles()\n",
-    "rgb_image_data = builder.get_composite()\n",
+    "# For visual verification, here are the RGB representations of the images.\n",
+    "def show_image_col(images):\n",
+    "    fig = plt.figure(tight_layout=True)\n",
+    "    \n",
+    "    num_images = len(images)\n",
+    "    all_axes = fig.subplots(num_images, 1, squeeze=False)\n",
+    "    \n",
+    "    for image, row in zip(images, all_axes):\n",
+    "        axes = row[0]\n",
+    "        axes.set_axis_off()\n",
+    "        axes.imshow(image)\n",
+    "    plt.show()\n",
     "\n",
-    "def rescale_rgb(image):\n",
-    "    for channel, cmin, cmax in [\n",
-    "        [0, 0, 255],\n",
-    "        [1, 0, 255],\n",
-    "        [2, 0, 255]\n",
-    "    ]:\n",
-    "        rescale_channel(image, channel, cmin, cmax)\n",
+    "def show_lab_image_col(lab_images):\n",
+    "    images = [img_as_ubyte(color.lab2rgb(image)) for image in lab_images]\n",
+    "    show_image_col(images)\n",
     "\n",
-    "rescale_rgb(rgb_image_data)\n",
-    "# TileMatcher always produces composites with float64 values.\n",
-    "rgb_fig, rgb_axes = plt.subplots(1, 1)\n",
-    "rgb_axes.imshow(img_as_ubyte(rgb_image_data.astype(np.uint8)))"
+    "show_lab_image_col([top_lab, bottom_lab])\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "supreme-bulletin",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "happy-detroit",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24c9f0fcf48b4a7aad3dfa58d6ab0539",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "Nope.\n",
+    "edge_of_top = tig.edge(0, 0, Edge.BOTTOM)\n",
+    "edge_of_bottom = tig.edge(0, 1, Edge.TOP)\n",
     "\n",
-    "I think the problem in this case is that the first column of the second row is an incomplete tile image."
+    "show_lab_image_col([edge_of_top, edge_of_bottom])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "intended-habitat",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a06e2a58f7d478f870fd0d257b56db9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def show_mapping(src, targ):\n",
+    "    # Yep, a bit more encapsulation violation...\n",
+    "    fig = plt.figure()\n",
+    "    axes = fig.subplots(1, 1)\n",
+    "    axes.plot(src, targ)\n",
+    "    axes.set_xlabel(\"Source\")\n",
+    "    axes.set_xlim((0, 100))\n",
+    "    axes.set_ylabel(\"Target\")\n",
+    "    axes.set_ylim((0, 100))\n",
+    "    plt.show()\n",
+    "\n",
+    "def show_adjuster_vals():\n",
+    "    matcher = ImageMatcher(edge_of_bottom, edge_of_top)\n",
+    "    # Get the first (L) channel adjuster.\n",
+    "    lchan = matcher._adjusters[0]\n",
+    "    show_mapping(lchan._osrc, lchan._otarg)\n",
+    "\n",
+    "show_adjuster_vals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "amended-logan",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fd70eef32394bedbdd8f33223fa3cb4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Does the adjuster do a good job on the edge of the bottom image?\n",
+    "\n",
+    "def show_adjusted_edge_of_bottom():\n",
+    "    matcher = ImageMatcher(edge_of_bottom, edge_of_top)\n",
+    "    # Get the first (L) channel adjuster.\n",
+    "    lchan = matcher._adjusters[0]\n",
+    "    \n",
+    "    adjusted = edge_of_bottom.copy()\n",
+    "    lchan.adjust(adjusted)\n",
+    "    \n",
+    "    show_lab_image_col([edge_of_top, edge_of_bottom, adjusted])\n",
+    "\n",
+    "show_adjusted_edge_of_bottom()\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "loaded-statistics",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0297ae0986214e3ea8670e2944324460",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def show_adjusted_bottom_tile():\n",
+    "    matcher = ImageMatcher(edge_of_bottom, edge_of_top)\n",
+    "    adjusted = matcher.adjusted(bottom_lab)\n",
+    "    show_lab_image_col([bottom_lab, adjusted])\n",
+    "    \n",
+    "show_adjusted_bottom_tile()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "labeled-optimum",
+   "id": "latter-paragraph",
    "metadata": {},
    "outputs": [],
    "source": []
